fix: Исправлено отображение списка задач

--- a/src/about.html
+++ b/src/about.html
@@ -7,6 +7,7 @@
     <title>О приложении</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/logo.png">
+
 </head>
 
 <body>
@@ -36,7 +37,7 @@
             <p>Абдурахманова Алина</p>
         </div>
     </main>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script> 
     <script src="bundle.js"></script>
 </body>
 
