--- a/src/list.html
+++ b/src/list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список задач</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="img/logo.png">
 </head>
 
@@ -33,7 +33,7 @@
         <div style="text-align: center;">
             <button id="openDialogButton">Добавить задачу</button>
         </div>
-        
+
         <dialog id="myDialog">
             <h2 style="text-align: center;"> Добавить задачу</h2>
             <form action="#" method="get" id="add-task-form">
@@ -44,11 +44,11 @@
             <button id="closeDialogButton">Закрыть</button>
         </dialog>
 
-        <script src="js/script.js"></script>
+        <script src="script.js"></script>
         <script src="bundle.js"></script>
     </a>
 
-    
+
     <div class="table">
         <div class="task-column" id="toDoColumn">
             <h3>Задачи</h3>
@@ -110,5 +110,7 @@
         </div>
     </div>
 
+
 </body>
+
 </html>
