--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="img/logo.png">
 </head>
 
@@ -17,7 +17,7 @@
             </a>
             <div class="menu-icon" id="menu-icon">&#9776;</div>
             <ul class="nav-links" id="nav-links">
-                <li class="active"><a href="главная.html">Главная</a></li>
+                <li class="active"><a href="index.html">Главная</a></li>
                 <li><a href="projects.html">Проекты</a></li>
                 <li><a href="list.html">Список задач</a></li>
                 <li><a href="about.html">О приложении</a></li>
@@ -40,7 +40,7 @@
         </div>
     </main>
 
-    <script src="js/script.js"></script> 
+    <script src="script.js"></script> 
     <script src="bundle.js"></script>
 </body>
 
