--- a/src/projects.html
+++ b/src/projects.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ошибка 404 - Страница не найдена</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="img/logo.png">
+   
     <style>
 
     </style>
@@ -33,7 +34,7 @@
         <img src="img/errorpage.png" alt="Ошибка 404" class="error-images">
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script> 
     <script src="bundle.js"></script>
 </body>
 
