feat: LAB5-1 Добавлены js-файлы для базового функционала списка задач

--- a/src/about.html
+++ b/src/about.html
@@ -37,7 +37,7 @@
             <p>Абдурахманова Алина</p>
         </div>
     </main>
-    <script src="script.js"></script> 
+    <script src="navigation.js"></script> 
     <script src="bundle.js"></script>
 </body>
 
