--- a/src/list.html
+++ b/src/list.html
@@ -45,70 +45,27 @@
         </dialog>
 
         <script src="script.js"></script>
+        <script src="navigation.js"></script>
         <script src="bundle.js"></script>
     </a>
-
 
     <div class="table">
         <div class="task-column" id="toDoColumn">
             <h3>Задачи</h3>
-            <ul class="task-list" id="toDoList">
-                <li class="task-item">
-                    <span class="checkbox">
-                        <input type="checkbox">
-                    </span>
-                    Вынести мусор
-                    <button class="delete-button">Удалить</button>
-                </li>
-                <li class="task-item">
-                    <span class="checkbox">
-                        <input type="checkbox">
-                    </span>
-                    Записаться к врачу
-                    <button class="delete-button">Удалить</button>
-                </li>
-            </ul>
+            <ul class="task-list" id="toDoList"></ul>
         </div>
 
         <div class="task-column" id="inProgressColumn">
             <h3>В работе</h3>
-            <ul class="task-list" id="inProgressList">
-                <li class="task-item">
-                    <span class="checkbox">
-                        <input type="checkbox">
-                    </span>
-                    Сдать лабу по ОВР
-                    <button class="delete-button">Удалить</button>
-                </li>
-                <li class="task-item">
-                    <span class="checkbox">
-                        <input type="checkbox">
-                    </span>
-                    Разобрать первые 3 лабораторные по численным методам
-                    <button class="delete-button">Удалить</button>
-                </li>
-                <li class="task-item">
-                    <span class="checkbox">
-                        <input type="checkbox">
-                    </span>
-                    Отчет для курсовой
-                    <button class="delete-button">Удалить</button>
-                </li>
-            </ul>
+            <ul class="task-list" id="inProgressList"></ul>
         </div>
+
         <div class="task-column" id="completedColumn">
             <h3>Выполненные</h3>
-            <ul class="task-list" id="completedList">
-                <li class="task-item">
-                    <span class="checkbox">
-                        <input type="checkbox" checked disabled>
-                    </span>
-                    Разобрать полку с книгами
-                    <button class="delete-button">Удалить</button>
-                </li>
-            </ul>
+            <ul class="task-list" id="completedList"></ul>
         </div>
     </div>
+
 
 
 </body>
