--- a/src/projects.html
+++ b/src/projects.html
@@ -34,7 +34,7 @@
         <img src="img/errorpage.png" alt="Ошибка 404" class="error-images">
     </main>
 
-    <script src="script.js"></script> 
+    <script src="navigation.js"></script> 
     <script src="bundle.js"></script>
 </body>
 
