--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         </div>
     </main>
 
-    <script src="script.js"></script> 
+    <script src="navigation.js"></script> 
     <script src="bundle.js"></script>
 </body>
 
